src/current/v21.1/take-and-restore-encrypted-backups.md
---
title: Take and Restore Encrypted Backups
summary: Learn about the advanced options you can use when you backup and restore a CockroachDB cluster.
toc: true
---

This doc provides information about how to take and restore encrypted backups in the following ways:

- [Using AWS Key Management Service (KMS)](#use-aws-key-management-service)
- [Using a passphrase](#use-a-passphrase)

{{site.data.alerts.callout_info}}
Encrypted [`BACKUP`](backup.html) is an [Enterprise-only](https://www.cockroachlabs.com/product/cockroachdb/) feature. However, you can take [full backups](take-full-and-incremental-backups.html) without an Enterprise license.
{{site.data.alerts.end}}

## Use AWS Key Management Service

 You can encrypt full or incremental backups with AWS Key Management Service (KMS) by using the [`kms` option](backup.html#options). Files written by the backup (`BACKUP` manifest and data files) are encrypted using a 256-bit crypto-random generated data key. This data key is encrypted with the provided AWS KMS URI(s) and stored alongside the `BACKUP` data in an `ENCRYPTION_INFO` file, which is used when restoring the backed-up data.

On [`RESTORE`](#restore-from-an-encrypted-backup-with-aws-kms), CockroachDB reads the `ENCRYPTION_INFO` file and attempts to decrypt the encrypted data key using the KMS URI provided in the `RESTORE` statement. Once CockroachDB successfully obtains the unencrypted data key, the `BACKUP` manifest and data files will be decrypted and the restoration will proceed. Similarly, the same KMS URI is needed to decrypt the file to list the contents of the backup when using [`SHOW BACKUP`](show-backup.html#show-an-encrypted-backup).

When used with [incremental backups](take-full-and-incremental-backups.html#incremental-backups), the `kms` option is applied to all the [backup file URLs](backup.html#backup-file-urls), which means each incremental must include at least one of the KMS URIs used to take the full backup. It can be any subset of the original URIs, but you cannot include any new KMS URIs. Similarly, when used with [locality-aware backups](take-and-restore-locality-aware-backups.html), the KMS URI provided is applied to files in all localities.

For more information about AWS KMS, see the [documentation](https://aws.amazon.com/kms/).

### Generate a customer master key (CMK)

Before you can use AWS KMS to encrypt a CockroachDB backup, you must first generate a **customer master key (CMK)**. This is the master key generated by AWS KMS and it never leaves the KMS. It contains key-related metadata and key material to encrypt/decrypt other data. The key material can never be exported, deleted, or extracted. CockroachDB expects the CMK to be symmetric (256 bit).

<a name="multi-region"></a> There is also the option to [use multi-region encryption on your data](#take-a-backup-with-multi-region-encryption). At the time of `BACKUP`, you can [provide multiple AWS KMS URIs](#aws-kms-uri-format), each referencing a CMK in a different AWS region. This allows CockroachDB to save multiple versions of the encrypted data key used to encrypt the backup data, one per AWS KMS URI. With these encrypted versions of the data key stored alongside the encrypted backup data, a user can `RESTORE` the encrypted data using any one of the KMS URIs that were supplied during backup. In the case of a single KMS region outage, the data can be decrypted with any of the CMKs from the other regions.

### AWS KMS URI format

The AWS KMS URI must use the following format:

~~~
aws:///<cmk>?AUTH=<auth_type>&REGION=<region>
~~~

The AWS URI **requires** the following:

 Component                  | Description
----------------------------+------------------------------------------------------------------------
`aws:///`                   | The AWS scheme. Note the triple slash (`///`).
`<cmk>`                     | The key identifiers used to reference the CMK that should be used to encrypt or decrypt. For information about the supported formats, see the [AWS KMS docs](https://docs.aws.amazon.com/kms/latest/developerguide/concepts.html#key-id).
`AUTH=<auth_type>`          | The user-specified credentials.<ul><li>If the `AUTH` parameter is not provided, the AWS connections default to `specified` and the access keys must be provided in the URI parameters (e.g., `AWS_ACCESS_KEY_ID=<key_id>&AWS_SECRET_ACCESS_KEY=<secret_key>`).</li><li>If `AUTH=implicit`, the access keys can be omitted and the [credentials will be loaded from the environment](https://docs.aws.amazon.com/sdk-for-go/api/aws/session/).</li></ul>
`REGION=<region>`           | The region of the CMK.

See below for [examples](#examples).

### Examples

- [Take an encrypted backup with AWS KMS](#take-an-encrypted-backup-with-aws-kms)
- [Take a backup with multi-region encryption](#take-a-backup-with-multi-region-encryption)
- [Restore from an encrypted backup with AWS KMS](#restore-from-an-encrypted-backup-with-aws-kms)

#### Take an encrypted backup with AWS KMS

To take an encrypted backup with AWS KMS, use the `kms` [option](backup.html#options):

{% include_cached copy-clipboard.html %}
~~~ sql
> BACKUP INTO 's3://{BUCKET NAME}/{PATH}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}'
    WITH kms = 'aws:///<cmk>?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}&REGION=us-east-1';
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries |  bytes
---------------------+-----------+--------------------+------+---------------+----------
  594193600274956289 | succeeded |                  1 | 2689 |          1217 | 1420108
(1 row)
~~~

#### Take a backup with multi-region encryption

To take a backup with [multi-region encryption](#multi-region), use the `kms` option to specify a comma-separated list of KMS URIs:

{% include_cached copy-clipboard.html %}
~~~ sql
> BACKUP INTO 's3://{BUCKET NAME}/{PATH}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}'
    WITH KMS=(
      'aws:///<cmk>?AUTH=implicit&REGION=us-east-1',
      'aws:///<cmk>?AUTH=implict&REGION=us-west-1'
    );
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries | bytes
---------------------+-----------+--------------------+------+---------------+--------
  594471427115220993 | succeeded |                  1 |   20 |             2 |  1026
(1 row)
~~~

#### Restore from an encrypted backup with AWS KMS

To decrypt an [encrypted backup](#take-an-encrypted-backup-with-aws-kms), use the `kms` option and any subset of the KMS URIs that was used to take the backup.

For example, the encrypted backup created in the [first example](#take-an-encrypted-backup-with-aws-kms) can be restored with:

{% include_cached copy-clipboard.html %}
~~~ sql
> RESTORE FROM LATEST IN 's3://{BUCKET NAME}/{PATH}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}'
    WITH kms = 'aws:///<cmk>?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}&REGION=us-east-1';
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries |  bytes
---------------------+-----------+--------------------+------+---------------+----------
  594193600274956291 | succeeded |                  1 | 2689 |          1217 | 1420108
(1 row)
~~~

To restore from a specific backup, use [`RESTORE FROM {subdirectory} IN ...`](restore.html#restore-a-specific-backup).

## Use a passphrase

{% include {{ page.version.version }}/backups/encrypted-backup-description.md %}

### Examples

{% include {{ page.version.version }}/backups/bulk-auth-options.md %}

#### Take an encrypted backup using a passphrase

To take an encrypted backup, use the [`encryption_passphrase` option](backup.html#with-encryption-passphrase):

{% include_cached copy-clipboard.html %}
~~~ sql
> BACKUP INTO 's3://{BUCKET NAME}/{PATH}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}' WITH encryption_passphrase = 'password123';
~~~
~~~
        job_id       |  status   | fraction_completed | rows | index_entries | bytes
---------------------+-----------+--------------------+------+---------------+---------
  543214409874014209 | succeeded |                  1 | 2597 |          1028 | 467701
(1 row)
~~~

To [restore](restore.html), use the same `encryption_passphrase`. See the [example](#restore-from-an-encrypted-backup-using-a-passphrase) below for more details.

#### Restore from an encrypted backup using a passphrase

To decrypt an encrypted backup, use the [`encryption_passphrase` option](backup.html#with-encryption-passphrase) option and the same passphrase that was used to create the backup.

For example, the encrypted backup created in the previous example can be restored with:

{% include_cached copy-clipboard.html %}
~~~ sql
> RESTORE FROM LATEST IN 's3://{BUCKET NAME}/{PATH}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}' WITH encryption_passphrase = 'password123';
~~~
~~~
        job_id       |  status   | fraction_completed | rows | index_entries | bytes
---------------------+-----------+--------------------+------+---------------+---------
  543217488273801217 | succeeded |                  1 | 2597 |          1028 | 467701
(1 row)
~~~

To restore from a specific backup, use [`RESTORE FROM {subdirectory} IN ...`](restore.html#restore-a-specific-backup).

## See also

- [`BACKUP`][backup]
- [`RESTORE`][restore]
- [Take Full and Incremental Backups](take-full-and-incremental-backups.html)
- [Take and Restore Locality-aware Backups](take-and-restore-locality-aware-backups.html)
- [Take Backups with Revision History and Restore from a Point-in-time](take-backups-with-revision-history-and-restore-from-a-point-in-time.html)
- [`SQL DUMP`](cockroach-dump.html)
- [`IMPORT`](migration-overview.html)
- [Use the Built-in SQL Client](cockroach-sql.html)
- [Other Cockroach Commands](cockroach-commands.html)

<!-- Reference links -->

[backup]:  backup.html
[restore]: restore.html
