src/current/v22.1/take-and-restore-encrypted-backups.md
---
title: Take and Restore Encrypted Backups
summary: Learn about the advanced options you can use when you backup and restore a CockroachDB cluster.
toc: true
docs_area: manage
---

This doc provides information about how to take and restore encrypted backups in the following ways:

- [Using AWS Key Management Service (KMS)](#aws-kms-uri-format)
- {% include new-in.md version="v22.1" %} [Using Google Cloud Key Management Service (KMS)](#google-cloud-kms-uri-format)
- [Using a passphrase](#use-a-passphrase)

{{site.data.alerts.callout_info}}
Encrypted [`BACKUP`](backup.html) is an [Enterprise-only](https://www.cockroachlabs.com/product/cockroachdb/) feature. However, you can take [full backups](take-full-and-incremental-backups.html) without an Enterprise license.
{{site.data.alerts.end}}

## Use Key Management Service

You can encrypt full or incremental backups with AWS or Google Cloud Key Management Service (KMS) by using the [`kms` option](backup.html#options). Files written by the backup (`BACKUP` manifest and data files) are encrypted using a 256-bit crypto-random generated data key. This data key is encrypted with the provided KMS URI(s) and stored alongside the `BACKUP` data in an `ENCRYPTION_INFO` file, which is used when restoring the backed-up data.

On [`RESTORE`](restore.html), CockroachDB reads the `ENCRYPTION_INFO` file and attempts to decrypt the encrypted data key using the KMS URI provided in the `RESTORE` statement. Once CockroachDB successfully obtains the unencrypted data key, the `BACKUP` manifest and data files will be decrypted and the restoration will proceed. Similarly, the same KMS URI is needed to decrypt the file to list the contents of the backup when using [`SHOW BACKUP`](show-backup.html#show-an-encrypted-backup).

When used with [incremental backups](take-full-and-incremental-backups.html#incremental-backups), the `kms` option is applied to all the [backup file URLs](backup.html#backup-file-urls), which means each incremental must include at least one of the KMS URIs used to take the full backup. It can be any subset of the original URIs, but you cannot include any new KMS URIs. Similarly, when used with [locality-aware backups](take-and-restore-locality-aware-backups.html), the KMS URI provided is applied to files in all localities.

For more information about AWS KMS, see the [documentation](https://aws.amazon.com/kms/). For more information about Google Cloud KMS, see the [documentation](https://cloud.google.com/kms/docs).

### Generate a KMS key

Before you can use a KMS to encrypt a CockroachDB backup, you must first generate a **KMS key**. This is the key generated by the cloud provider and it never leaves the KMS. It contains key-related metadata and key material to encrypt/decrypt other data. The key material can never be exported, deleted, or extracted. CockroachDB expects the key to be symmetric (256 bit).

<a name="multi-region"></a> CockroachDB also supports [multi-region encryption](#take-a-backup-with-multi-region-encryption) for your backup. At the time of `BACKUP`, you can [provide multiple KMS URIs](#aws-kms-uri-format), each referencing a KMS key in a different region. This allows CockroachDB to save multiple versions of the encrypted data key used to encrypt the backup data, one per KMS URI. With these encrypted versions of the data key stored alongside the encrypted backup data, a user can `RESTORE` the encrypted data using any one of the KMS URIs that were supplied during backup. In the case of a single KMS region outage, the data can be decrypted with any of the KMS keys from the other regions.

#### Add a new KMS key to an existing backup

To add a new KMS key to an existing backup, use the [`ALTER BACKUP`](alter-backup.html) statement. `ALTER BACKUP` allows for new KMS encryption keys to be applied to an existing chain of encrypted backups (full and incremental). Once completed, subsequent `BACKUP`, `RESTORE`, and [`SHOW BACKUP`](show-backup.html) statements can use any of the existing or new KMS URIs to decrypt the backup.

For examples on adding a new KMS key to an existing backup, see the [`ALTER BACKUP` examples](alter-backup.html#examples).

### URI formats

#### AWS KMS URI format

The AWS KMS URI must use the following format:

~~~
aws:///{key}?AUTH={auth_type>}&REGION={region}
~~~

The AWS URI **requires** the following:

 Component                  | Description
----------------------------+------------------------------------------------------------------------
`aws:///`                   | The AWS scheme. Note the triple slash (`///`).
`{key}`                     | The key identifiers used to reference the KMS key that should be used to encrypt or decrypt. For information about the supported formats, see the [AWS KMS docs](https://docs.aws.amazon.com/kms/latest/developerguide/concepts.html#key-id).
`AUTH=<auth_type>`          | The user-specified credentials. If you use `AUTH=specified`, you must provide access keys in the URI parameters (e.g., `AWS_ACCESS_KEY_ID=<key_id>&AWS_SECRET_ACCESS_KEY=<secret_key>`). If you use `AUTH=implicit`, the access keys can be omitted and the [credentials will be loaded from the environment](https://docs.aws.amazon.com/sdk-for-go/api/aws/session/). For details on setting up and using the different authentication types, see [Authentication](use-cloud-storage-for-bulk-operations.html#authentication).
`REGION=<region>`           | The region of the KMS key.

See AWS's [KMS keys](https://docs.aws.amazon.com/kms/latest/developerguide/create-keys.html) documentation for guidance on creating an AWS KMS key.

#### Google Cloud KMS URI format

The Google Cloud KMS URI must use the following format:

~~~
gs:///projects/{project name}/locations/{location}/keyRings/{key ring name}/cryptoKeys/{key name}?AUTH={auth_type}
~~~

The Google Cloud URI **requires** the following:

 Component                  | Description
----------------------------+------------------------------------------------------------------------
`gs:///`                    | The Google Cloud scheme. Note the triple slash (`///`).
`projects/{project name}`   | The name of the project that will hold the objects to encrypt.
`locations/{location}`      | The location specified at key creation.
`keyRings/{key ring}`       | The Google Cloud key ring created to group keys.
`cryptoKeys/{key name}`     | The name of the key.
`AUTH=<auth_type>`          | The user-specified credentials. If you use `AUTH=specified`, then you must include `&CREDENTIALS=` with your base-64 encoded key. To load credentials from your environment, use `AUTH=implicit`. For details on setting up and using the different authentication types, see [Authentication](use-cloud-storage-for-bulk-operations.html#authentication).

See Google Cloud's [customer-managed encryption key](https://cloud.google.com/storage/docs/encryption/using-customer-managed-keys) documentation for guidance on creating a KMS key.

### Examples

- [Take an encrypted backup](#take-an-encrypted-backup)
- [Take a backup with multi-region encryption](#take-a-backup-with-multi-region-encryption)
- [Restore from an encrypted backup](#restore-from-an-encrypted-backup)

The following examples provide connection strings to Amazon S3 and Google Cloud Storage. For guidance using other authentication parameters, read Use Cloud Storage for Bulk Operations.

<div class="filters clearfix">
  <button class="filter-button" data-scope="s3">AWS</button>
  <button class="filter-button" data-scope="gcs">Google Cloud</button>
</div>

<section class="filter-content" markdown="1" data-scope="s3">

#### Take an encrypted backup

To take an encrypted backup with AWS KMS, use the `kms` [option](backup.html#options):

{% include_cached copy-clipboard.html %}
~~~ sql
> BACKUP INTO 's3://{BUCKET NAME}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}'
    WITH kms = 'aws:///{key}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}&REGION=us-east-1';
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries |  bytes
---------------------+-----------+--------------------+------+---------------+----------
  594193600274956289 | succeeded |                  1 | 2689 |          1217 | 1420108
(1 row)
~~~

#### Take a backup with multi-region encryption

To take a backup with [multi-region encryption](#multi-region), use the `kms` option to specify a comma-separated list of KMS URIs:

{% include_cached copy-clipboard.html %}
~~~ sql
> BACKUP INTO 's3://{BUCKET NAME}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}'
    WITH KMS=(
      'aws:///{key}?AUTH=implicit&REGION=us-east-1',
      'aws:///{key}?AUTH=implict&REGION=us-west-1'
    );
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries | bytes
---------------------+-----------+--------------------+------+---------------+--------
  594471427115220993 | succeeded |                  1 |   20 |             2 |  1026
(1 row)
~~~

#### Restore from an encrypted backup

To decrypt an [encrypted backup](#take-an-encrypted-backup), use the `kms` option and any subset of the KMS URIs that was used to take the backup.

For example, the encrypted backup created in the [first example](#take-an-encrypted-backup) can be restored with:

{% include_cached copy-clipboard.html %}
~~~ sql
> RESTORE FROM LATEST IN 's3://{BUCKET NAME}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}'
    WITH kms = 'aws:///{key}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}&REGION=us-east-1';
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries |  bytes
---------------------+-----------+--------------------+------+---------------+----------
  594193600274956291 | succeeded |                  1 | 2689 |          1217 | 1420108
(1 row)
~~~

</section>

<section class="filter-content" markdown="1" data-scope="gcs">

#### Take an encrypted backup

To take an encrypted backup with Google Cloud KMS, use the `kms` [option](backup.html#options):

{% include_cached copy-clipboard.html %}
~~~ sql
> BACKUP INTO 'gs://{BUCKET NAME}?AUTH=specified&CREDENTIALS={ENCODED KEY}'
    WITH kms = 'gs:///projects/{project name}/locations/us-east1/keyRings/{key ring name}/cryptoKeys/{key name}?AUTH=specified&CREDENTIALS={encoded key}';
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries |  bytes
---------------------+-----------+--------------------+------+---------------+----------
  594193600274956289 | succeeded |                  1 | 2689 |          1217 | 1420108
(1 row)
~~~

#### Take a backup with multi-region encryption

To take a backup with [multi-region encryption](#multi-region), use the `kms` option to specify a comma-separated list of KMS URIs:

{% include_cached copy-clipboard.html %}
~~~ sql
> BACKUP INTO 'gs://{BUCKET NAME}?AUTH=specified&CREDENTIALS={ENCODED KEY}'
    WITH KMS=(
      'gs:///projects/{project name}/locations/us-east1/keyRings/{key ring name}/cryptoKeys/{key name}?AUTH=specified&CREDENTIALS={encoded key}',
      'gs:///projects/{project name}/locations/us-west1/keyRings/{key ring name}/cryptoKeys/{key name}?AUTH=specified&CREDENTIALS={encoded key}'
    );
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries | bytes
---------------------+-----------+--------------------+------+---------------+--------
  594471427115220993 | succeeded |                  1 |   20 |             2 |  1026
(1 row)
~~~

#### Restore from an encrypted backup

To decrypt an [encrypted backup](#take-an-encrypted-backup), use the `kms` option and any subset of the KMS URIs that was used to take the backup.

For example, the encrypted backup created in the [first example](#take-an-encrypted-backup) can be restored with:

{% include_cached copy-clipboard.html %}
~~~ sql
> RESTORE FROM LATEST IN 'gs://{BUCKET NAME}?AUTH=specified&CREDENTIALS={ENCODED KEY}'
    WITH kms = 'gs:///projects/{project name}/locations/us-east1/keyRings/{key ring name}/cryptoKeys/{key name}?AUTH=specified&CREDENTIALS={encoded key}';
~~~

~~~
        job_id       |  status   | fraction_completed | rows | index_entries |  bytes
---------------------+-----------+--------------------+------+---------------+----------
  594193600274956291 | succeeded |                  1 | 2689 |          1217 | 1420108
(1 row)
~~~

</section>

## Use a passphrase

{% include {{ page.version.version }}/backups/encrypted-backup-description.md %}

### Examples

{% include {{ page.version.version }}/backups/bulk-auth-options.md %}

#### Take an encrypted backup using a passphrase

To take an encrypted backup, use the [`encryption_passphrase` option](backup.html#with-encryption-passphrase):

{% include_cached copy-clipboard.html %}
~~~ sql
> BACKUP INTO 's3://{BUCKET NAME}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}' WITH encryption_passphrase = 'password123';
~~~
~~~
        job_id       |  status   | fraction_completed | rows | index_entries | bytes
---------------------+-----------+--------------------+------+---------------+---------
  543214409874014209 | succeeded |                  1 | 2597 |          1028 | 467701
(1 row)
~~~

To [restore](restore.html), use the same `encryption_passphrase`. See the [example](#restore-from-an-encrypted-backup-using-a-passphrase) below for more details.

#### Restore from an encrypted backup using a passphrase

To decrypt an encrypted backup, use the [`encryption_passphrase` option](backup.html#with-encryption-passphrase) option and the same passphrase that was used to create the backup.

For example, the encrypted backup created in the previous example can be restored with:

{% include_cached copy-clipboard.html %}
~~~ sql
> RESTORE FROM LATEST IN 's3://{BUCKET NAME}?AWS_ACCESS_KEY_ID={KEY ID}&AWS_SECRET_ACCESS_KEY={SECRET ACCESS KEY}' WITH encryption_passphrase = 'password123';
~~~
~~~
        job_id       |  status   | fraction_completed | rows | index_entries | bytes
---------------------+-----------+--------------------+------+---------------+---------
  543217488273801217 | succeeded |                  1 | 2597 |          1028 | 467701
(1 row)
~~~

To restore from a specific backup, use [`RESTORE FROM {subdirectory} IN ...`](restore.html#restore-a-specific-backup).

## See also

- [`BACKUP`][backup]
- [`RESTORE`][restore]
- [`ALTER BACKUP`](alter-backup.html)
- [Take Full and Incremental Backups](take-full-and-incremental-backups.html)
- [Take and Restore Locality-aware Backups](take-and-restore-locality-aware-backups.html)
- [Take Backups with Revision History and Restore from a Point-in-time](take-backups-with-revision-history-and-restore-from-a-point-in-time.html)
- [`IMPORT`](migration-overview.html)
- [Use the Built-in SQL Client](cockroach-sql.html)
- [`cockroach` Commands Overview](cockroach-commands.html)

<!-- Reference links -->

[backup]:  backup.html
[restore]: restore.html
